--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,12 @@
         },
         {
             "type": "PowerShell",
-            "request": "attach",
-            "name": "PowerShell Attach to Host Process",
-            "processId": "${command.PickPSHostProcess}",
-            "runspaceId": 1
+            "request": "launch",
+            "name": "PowerShell Launch Current File in Temporary Console",
+            "script": "${file}",
+            "args": [],
+            "cwd": "${file}",
+            "createTemporaryIntegratedConsole": true
         },
         {
             "type": "PowerShell",
